src/main/java/com/example/kataAPI/errors/custom_exceptions/Not_found_beer.java
package com.example.kataAPI.errors.custom_exceptions;



public class Not_found_beer extends RuntimeException {

    public Not_found_beer (String message) {
        super(message);
    }

}
